cleanup & fix small layout bugs

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -27,11 +27,12 @@
 
 .navbar {
 
-  min-width: 400px;
+  width: 400px;
+  max-width: 100%;
 
   display: flex;
   justify-content: space-evenly;
-  padding: 30px;
+  padding: 30px 0;
 
   a {
     font-size: 20px;
@@ -39,11 +40,11 @@
     cursor: Pointer;
     text-decoration: none;
 
-    &:hover{
+    &:hover {
       color: white;
     }
 
-    &.active{
+    &.active {
       font-weight: bold;
       color: white;
     }
@@ -52,7 +53,14 @@
 }
 
 .footer {
-  //background: rgba(0,0,0,0.1);
   width: 100%;
-  font-size: 10px;
+  font-size: 12px;
+
+  a {
+    color: white;
+    text-decoration: none;
+    &:hover{
+      text-decoration: underline;
+    }
+  }
 }
